sqlite user orm

--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.jpa.database-platform=com.saramgwa.board.config.SQLDialect
+spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.url=jdbc:sqlite:board_db.db
+spring.datasource.username=admin
+spring.datasource.password=admin
