--- a/board/build.gradle
+++ b/board/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	runtimeOnly 'org.xerial:sqlite-jdbc:3.34.0'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
