--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.url=jdbc:sqlite:board_db.db
 spring.datasource.username=admin
 spring.datasource.password=admin
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
