--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# server.port=8000
 spring.jpa.database-platform=com.saramgwa.board.config.SQLDialect
 spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.show-sql=true
@@ -5,4 +6,8 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.url=jdbc:sqlite:board_db.db
 spring.datasource.username=admin
 spring.datasource.password=admin
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+# spring.mvc.view.suffix=.jsp
+spring.security.oauth2.client.registration.google.client-id=703229571961-1qili9ons67v7qt5vcf13jdqe7irgdd0.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile,email
