add post api & refact apis and test

--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.security.oauth2.client.registration.google.client-id=703229571961-1qili9ons67v7qt5vcf13jdqe7irgdd0.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-sqlite.sql
