--- a/board/build.gradle
+++ b/board/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.session:spring-session-jdbc'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	runtimeOnly 'org.xerial:sqlite-jdbc:3.34.0'
 
